# gdpicture

./: CMakeLists.txt  README.md  canvaslabel.cpp  canvaslabel.h  canvaslayer.cpp  canvaslayer.h  clayer.h  coverlabel.cpp  coverlabel.h  coverlayer.cpp  coverlayer.h  cvcore.cpp  cvcore.h  cvzoom.cpp  log.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  savefiledialog.cpp  savefiledialog.h  savefiledialog.ui  showwidget.cpp  showwidget.h
